@@ -1,3 +1,9 @@
+2011-09-02  Martin Jambor  <mjambor@suse.cz>
+
+	PR middle-end/49886
+	* gcc.c-torture/execute/pr49886.c: New testcase.
+	* gfortran.fortran-torture/compile/pr50260.f90: Likewise.
+
 2011-09-01  Ira Rosen  <ira.rosen@linaro.org>
 
 	PR tree-optimization/50178
